<resources>
    <string name="app_name">TrafficLightSimulation</string>
    <string name="start">start</string>
    <string name="settings">Settings</string>
    <string name="music">Music</string>
    <string name="speed">Speed</string>
    <string name="gear">gear</string>
    <string name="blackmoon">blackMoon</string>
    <string name="trafficlight">trafficLight</string>
    <string name="back">back</string>
</resources>