<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#221F2B">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="83dp"
        android:layout_height="84dp"
        android:background="@null"
        android:contentDescription="@string/blackmoon"
        android:onClick="onClickedBackToMainActivityButton"
        android:src="@drawable/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/settingsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/grey"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <CheckBox
        android:id="@+id/musicCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/grey"
        android:layoutDirection="inherit"
        android:onClick="onClickedMusicCheckBox"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toEndOf="@+id/musicView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

    <SeekBar
        android:id="@+id/speadSeekBar"
        android:layout_width="140dp"
        android:layout_height="36dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="120dp"
        android:backgroundTint="@color/grey"
        android:filterTouchesWhenObscured="false"
        android:progressBackgroundTint="@color/grey"
        android:progressTint="@color/grey"
        android:secondaryProgressTint="@color/grey"
        android:thumbTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/speedView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512"
        app:tickMarkTint="@color/grey" />

    <TextView
        android:id="@+id/speedView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        android:textColor="@color/grey"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.509" />

    <TextView
        android:id="@+id/musicView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music"
        android:textColor="@color/grey"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

</androidx.constraintlayout.widget.ConstraintLayout>