<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_gravity="center"
    android:background="#3C3B3E"
    android:foregroundTintMode="add"
    android:hapticFeedbackEnabled="false"
    android:keepScreenOn="false"
    android:layerType="none"
    android:layoutMode="opticalBounds"
    android:textAlignment="textStart"
    android:textDirection="rtl"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="77dp"
        android:layout_height="78dp"
        android:background="@null"
        android:contentDescription="@string/gear"
        android:onClick="onClickSettings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/gear"
        android:src="@drawable/gear"/>

    <ImageButton
        android:id="@+id/dayOrNightModeButton"
        android:layout_width="83dp"
        android:layout_height="84dp"
        android:background="@null"
        android:contentDescription="@string/blackmoon"
        android:onClick="onClickDayOrNightMode"
        android:src="@drawable/blackmoon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/blackmoon" />

    <FrameLayout
        android:id="@+id/thirdLight"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:foreground="@drawable/grey_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondLight">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/firstLight"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="108dp"
        android:background="#00FFFFFF"
        android:foreground="@drawable/grey_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/secondLight"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:background="#003C3F41"
        android:foreground="@drawable/grey_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstLight">

    </FrameLayout>

    <Button
        android:id="@+id/startOrStopButton"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:background="#221F2B"
        android:onClick="onClickStartOrStopButton"
        android:shadowDx="100"
        android:shadowRadius="100"
        android:text="@string/start"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdLight" />

</androidx.constraintlayout.widget.ConstraintLayout>